# simple-blog

./: pyproject.toml
DevBlog - Personal Blog Template/DevBlog/: about.html  index.html
DevBlog - Personal Blog Template/DevBlog/js/: scripts.js
src/base_static/static/base/css/: plugin.css  style.css
src/config/: settings.py  urls.py
src/main/: models.py  urls.py  views.py
src/main/templates/: about.html  base.html  contact.html  index.html  work.html
src/posts/: models.py  urls.py  views.py
src/posts/templates/: posts.html
src/templates/: base.html
src/users/: models.py
